last sword offer